# SDiZO2

./: .gitignore  CMakeLists.txt  README.md  SDiZO_2.h  main.cpp
UI/: Interface.cpp  Interface.h  UI.cpp  UI.h  UI.hpp
algorithms/: Algorithms.cpp  Algorithms.h  Algorithms.hpp  PathElement.h  Results.h
containers/AdjacencyList/: ALElement.h  AdjacencyList.cpp  AdjacencyList.h  AdjacencyList.hpp  ListGraph.cpp  ListGraph.h  ListGraphElement.h
containers/AdjacencyMatrix/: AdjacencyMatrix.cpp  AdjacencyMatrix.h
containers/DynamicArray/: DynamicArray.hpp  DynamicArray.tpp  MyArray.h  MyArray.tpp
containers/EdgeHeap/: DynamicArray.hpp  DynamicArray.tpp  Edge.h  Edge.hpp  EdgeHeap.cpp  EdgeHeap.h  EdgeHeap.hpp  MyHeap.cpp  MyHeap.h
containers/IncidencyMatrix/: IncidencyMatrix.cpp  IncidencyMatrix.h  IncidencyMatrix.hpp  MatrixCell.h  MatrixCell.hpp  MatrixElement.h  MatrixGraph.cpp  MatrixGraph.h
containers/NeighbourhoodList/: NeighbourhoodList.cpp  NeighbourhoodList.h
utilities/: ALElement.h  Edge.h  Enums.h  MatrixCell.h  NListElement.h  PathElement.h  PathElement.hpp  Results.h  Results.hpp  TimeMeasurement.h  TimeMeasurement.hpp
utilities/FileOps/: FileManagement.cpp  FileManagement.h  FileOps.cpp  FileOps.h  FileOps.hpp
utilities/GraphGenerator/: GraphGenerator.cpp  GraphGenerator.h  GraphGenerator.hpp
utilities/Testing/: Simulation.cpp  Simulation.h  Testing.cpp  Testing.h  Testing.hpp  TimeMeasurement.hpp
